# shenqi-box

./: .gitignore  .pre-commit-config.yaml  .typos.toml  Anchor.toml  Cargo.toml  Makefile  README-MAKEFILE.md  README.md  cliff.toml  meta.json  package.json  pnpm-lock.yaml  tsconfig.json
clients/rs/token_2022_nft/: programs.rs
clients/rs/token_2022_nft/accounts/: mod.rs  nft_authority.rs
clients/rs/token_2022_nft/instructions/: mint_nft.rs  mod.rs
clients/rs/token_2022_nft/types/: mod.rs  nft_metadata_updated.rs  nft_minted.rs
clients/ts/token_2022_nft/: index.ts
clients/ts/token_2022_nft/accounts/: index.ts  nftAuthority.ts
clients/ts/token_2022_nft/instructions/: index.ts  mintNft.ts
clients/ts/token_2022_nft/programs/: index.ts  token2022Nft.ts
clients/ts/token_2022_nft/shared/: index.ts
clients/ts/token_2022_nft/types/: index.ts  nftMetadataUpdated.ts  (+1 more)
docs/: deploy.md  readme.md
idl/codama/: metaplex_nft.codama.json  shenqi_box.codama.json  token_2022_nft.codama.json
idls/metaplex_nft/: metaplex_nft-2025-08-06-094040.json
idls/token_2022_nft/: token_2022_nft-2025-08-31-000623.json
mochawesome-report/: mochawesome.html  mochawesome.json
mochawesome-report/assets/: app.css  app.js
programs/metaplex_nft/: Cargo.toml
programs/metaplex_nft/src/: lib.rs
programs/shenqi-box/: Cargo.toml
programs/shenqi-box/src/: lib.rs
programs/token_2022_nft/: Cargo.toml
programs/token_2022_nft/src/: lib.rs
scripts/: generate-clients.ts  mint-nft-advanced.ts  test-metaplex-nft.ts
tests/: metaplex_nft.ts  shenqi_box.ts  token_2022_nft.ts
