[package]
description = "Created with Anchor"
edition = "2021"
name = "shenqi_box"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "shenqi_box"

[features]
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []


[dependencies]
anchor-lang = "0.31.1"
