[package]
description = "Created with Anchor"
edition = "2021"
name = "token_2022_nft"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_2022_nft"

[features]
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }

anchor-spl = { version = "0.31.1", features = ["token_2022_extensions"] }
spl-type-length-value = "0.9.0"
